# fast_rss

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  LICENSE  README.md  RELEASE.md  index.html  mix.exs  parse_anxiety_comparison.html  parse_anxiety_elixir_feed_parser.html  parse_anxiety_fast_rss.html  parse_anxiety_feed_raptor.html  parse_anxiety_feeder_ex.html  parse_ben_comparison.html  parse_ben_elixir_feed_parser.html  parse_ben_fast_rss.html  parse_ben_feed_raptor.html  parse_ben_feeder_ex.html  parse_daily_comparison.html  parse_daily_elixir_feed_parser.html  parse_daily_fast_rss.html  parse_daily_feed_raptor.html  parse_daily_feeder_ex.html  parse_dave_comparison.html  parse_dave_elixir_feed_parser.html  parse_dave_fast_rss.html  parse_dave_feed_raptor.html  parse_dave_feeder_ex.html  parse_sleepy_comparison.html  parse_sleepy_elixir_feed_parser.html  parse_sleepy_fast_rss.html  parse_sleepy_feed_raptor.html  parse_sleepy_feeder_ex.html  parse_stuff_comparison.html  parse_stuff_elixir_feed_parser.html  parse_stuff_fast_rss.html  parse_stuff_feed_raptor.html  parse_stuff_feeder_ex.html  release
.github/workflows/: release.yml
bench/: .gitignore  README.md  bench.exs  mix.exs
bench/data/: anxiety.rss  ben.rss  daily.rss  dave.rss  sleepy.rss  stuff.rss
bench/output/: dirty_vs_normal.md  parse.md  parse_anxiety_comparison.html  parse_anxiety_elixir_feed_parser.html  parse_anxiety_fast_rss.html  (+5 more)
lib/: fast_rss.ex
native/fastrss/: Cargo.toml  Cross.toml
native/fastrss/.cargo/: config  config.toml
native/fastrss/src/: lib.rs
test/: fast_rss_test.exs
