[package]
name = "fastrss"
version = "0.3.0"
authors = []
edition = "2018"

[lib]
name = "fastrss"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.0"
lazy_static = "1.4"
rss = {version = "1.9", features = ["serde"], default-features = false}
serde = "1.0.104"
serde_json = "1.0.48"
serde_rustler = {git = "https://github.com/sunny-g/serde_rustler" }
serde-transcode = "1.1.0"
