[package]
authors = []
edition = "2018"
name = "fastrss"
version = "0.3.0"

[lib]
crate-type = ["dylib"]
name = "fastrss"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4"
rss = {version = "1.9", features = ["serde"], default-features = false}
rustler = "0.21"
serde = "1.0"
serde-transcode = "1.1"
serde_json = "1.0"
serde_rustler = "0.1.0"
